Use Java 19 Virtual Thread